--- a/JC.Core/JC.Core.csproj
+++ b/JC.Core/JC.Core.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Flurl.Http" Version="4.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.11" />
     </ItemGroup>
 
