--- a/JC.Web/JC.Web.csproj
+++ b/JC.Web/JC.Web.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
+      <PackageReference Include="QRCoder" Version="1.7.0" />
     </ItemGroup>
 
     <ItemGroup>
